my-apps/minecraft/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: minecraft
  name: minecraft
spec:
  serviceName: "minecraft"
  replicas: 1
  selector:
    matchLabels:
      app: minecraft
  template:
    metadata:
      labels:
        app: minecraft
    spec:
      imagePullSecrets:
      - name: gitea-pull-secret
      containers:
      - name: minecraft
        image: gitea.mattshan.dev/matthewshan99/minecraft:alphav0.0.1
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: minecraft-data
          mountPath: /minecraft
        resources:
          limits:
            cpu: 1500m
            memory: 1024M
            ephemeral-storage: 50Mi
          requests:
            cpu: 750m
            memory: 750M
            ephemeral-storage: 2Mi
        ports:
        - containerPort: 25565
          name: java
        - containerPort: 19132
          name: bedrock-v4
        - containerPort: 19133
          name: bedrock-v6
  volumeClaimTemplates:
  - metadata:
      name: minecraft-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "longhorn"
      resources:
        requests:
          storage: 3Gi
