my-apps/minecraft/tcp-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: minecraft-tcp-route
  namespace: minecraft
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-minecraft
      namespace: gateway
      port: 25565
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-minecraft
      namespace: gateway
      port: 19132
    # - group: gateway.networking.k8s.io
    #   kind: Gateway
    #   name: gateway-minecraft
    #   namespace: gateway
    #   port: 19133
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: minecraft
          port: 25565
          weight: 1
        - group: ''
          kind: Service
          name: minecraft
          port: 19132
          weight: 1
        # - group: ''
        #   kind: Service
        #   name: minecraft
        #   port: 19133
        #   weight: 1
